# VisualFusion

./: README.md  README.md.backup
IR_Convert_v21_libtorch/: CMakeLists.txt  FP16image_homo_errors.csv  FP16itiming_log.csv  build_and_test.sh  cpuWarmUPitiming_log.csv  cpu_noWarmupimage_homo_errors.csv  cpu_noWarmupitiming_log.csv  cpu_timing_log.csv  cuda_timing_log_fp32.csv  fp16fp32_image_homo_errors.csv  fp16image_homo_errors.csv  fp16itiming_log.csv  fp32WUPcuda_image_homo_errors.csv  fp32WUPcuda_itiming_log.csv  fp32image_homo_errors.csv  fp32itiming_log.csv  image_homo_errors.csv  image_homo_errors1.csv  itiming_log.csv  libnote.txt  main.cpp  main0701.cpp  main0708.cpp  main0712.cpp  main0715_3chanceBigUpdate.cpp  main0721.cpp  normalMain.cpp  rename_homo_labels.py  test.cpp  test.py  test2.py  test_imshow  timing_log.csv  video_homo_errors.csv  ximage_homo_errors.csv
IR_Convert_v21_libtorch/config/: config.json
IR_Convert_v21_libtorch/lib_image_fusion/include/: core_image_align_libtorch.h
IR_Convert_v21_libtorch_nx/: CMakeLists.txt  gcc.sh  main.cpp
IR_Convert_v21_libtorch_nx/config/: config.json
IR_Convert_v21_libtorch_nx/lib_image_fusion/include/: core_image_align_libtorch.h  core_image_fusion.h  core_image_to_gray.h
IR_Convert_v21_libtorch_nx/lib_image_fusion/src/: core_image_align_libtorch.cpp  core_image_align_libtorch_bkup.cpp  core_image_fusion.cpp
Onnx/: CMakeLists.txt  benchmark.sh  cpuonnx_inference_times.csv  cudafp32image_feature_mse_errors.csv  cudafp32onnx_inference_times.csv  final_test.sh  fp32image_feature_mse_errors.csv  fp32onnx_inference_times.csv  gcc.sh  image_feature_mse_errors.csv  image_homo_errors.csv  main.cpp  onnx_inference_times.csv  onnx_inference_times_cpufp32.csv  onnx_inference_times_cuda32.csv  performance_test.sh  quick_test.sh  setup_env.sh  test_4claGTHomo.py  test_onnx_python.py
Onnx/config/: config.json
Onnx/nlohmann/: json.hpp
Onnx/output/: feat_data_2024-07-11_14-16-32.csv
convert_to_libtorch/: build_trt_engine_fp32.sh  check.py  convert_examples.sh  export_keypoints_dynamic_onnx.py  export_onnx2tensorRT.py  export_onnxFP16toTRT16test.py  export_onnx_tensorrt_compatible.py  export_py32onnx32TRT16.py  export_to_jit.py  export_to_jit_fp16.py  export_to_jit_fp16_nx.py  export_to_jit_fp32.py  export_to_jit_fp32_nx.py  export_to_onnx.py  export_to_onnx_always1200kp.py  export_to_onnx_fp16.py  export_to_onnx_fp32.py  export_to_tensorRT_fp16.py  export_to_tensorrt_fp16.py  export_to_tensorrt_fp16NX.py  export_to_tensorrt_fp32.py  export_to_tensorrt_fp32NX.py  note.py  pytorch2trt_fusion_v2.py  test_fixed_model.py  test_onnx_export.py  test_tensorrt_conversion.sh  tmp.txt  trtexec_log.txt
convert_to_libtorch/model_jit/: SemLA.py  fusion.py  reg.py  utils.py
tensorRT/: CMakeLists.txt  atensorrt_feature_mse_errors.csv  atensorrt_inference_times.csv  atmpimage_homo_errors.csv  atmpitiming_log.csv  build_and_run.sh  build_and_test.sh  build_trt_engine_fp32.sh  fp16image_homo_errors.csv  fp16tensorrt_inference_times.csv  fp32fp32fp16mse.csv  fp32fp32fp16time.csv  fp32image_homo_errors.csv  fp32itiming_log.csv  fp32tensorrt_feature_mse_errors.csv  fp32tensorrt_inference_times.csv  gcc.sh  image_homo_errors.csv  itiming_log.csv  main.cpp  tensorrt_inference_times.csv  test_onnx_simple.cpp  test_trt.inf_backup.py
tensorRT/config/: config.json
tensorRT_nx/: CMakeLists.txt  build_trt_engine_fp32.sh  f16image_homo_errors.csv  f16itiming_log.csv  fo32image_homo_errors.csv  fp32itiming_log.csv  gcc.sh  image_homo_errors.csv  itiming_log.csv  main.cpp  video_homo_errors.csv
tensorRT_nx/config/: config.json
tensorRT_nx/lib_image_fusion/include/: core_image_align_tensorrt.h  core_image_fusion.h  core_image_fusion_trt.h  core_image_perspective.h  core_image_resizer.h
tensorRT_nx/lib_image_fusion/src/: core_image_align_tensorrt copy.cpp  core_image_align_tensorrt.cpp  core_image_align_tensorrtCSVinput.cpp  core_image_fusion.cpp  core_image_fusion_trt.cpp  core_image_to_gray.cpp
tensorRT_nx/model/NX/: border_1_fusion.onnx  border_1_fusion.trt  border_4_fusion.onnx  border_4_fusion.trt  note.txt
tensorRT_nx/nlohmann/: json_fwd.hpp
tensorRT_nx/utils/include/: util_timer.h
(+33 files in other folders)
